--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     align-items:center;
     font-size:50px;
     margin-top:5px;
-    margin-bottom:5px;
+    margin-left:500px;
     height:0px;
 }
 
@@ -32,13 +32,15 @@
 body{
     background-image: url(https://www.w3schools.com/css/paris.jpg)
 }
-#About{
+#about{
     height:40px;
     width:45px;
+    display:flex;
+    justify-content:center;
 }
 .contact{
     
-    width:7000px;
+    width:100%;
     margin-left: 55px;
     margin-top:0px;
     display:flex;
@@ -56,8 +58,21 @@ body{
     width:300px;
     list-style: none;
     
+    
 }
 .nav-item a{
     font-size:48px;
     color:white;
+    display:flex;
+    justify-content:space-around;
+     margin-left: 10px;
+}
+.footer{
+    font-size: 30px;
+    color:red;
+    margin-bottom:100%;
+}
+.nav{
+    display:flex;
+    justify-content:center;
 }
