--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 .me{
     width:100px;
     height:100px;
-    border:solid black;
+    border: 1px solid black;
 }
 body{
     background-image: url(https://www.w3schools.com/css/paris.jpg)
